# 7j523game-developing-

./: README.md  server
client/: client.cpp  client.h  dummyClient.cpp  log.cpp  pack.h
server/: CMakeLists.txt  command.h  deckC.cpp  deckC.h  list_of_actions  log.h  pack.cpp  seat.cpp  seat.h  server.cpp  server.h  tags
